# drfraudsworth

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.audit/findings/: S004.md
.bok/: run-bc-kani.sh  run-kani-individual.sh
.bulwark/: FINAL_REPORT.md  STRATEGIES.md
.bulwark/context/: 01-SEC-01-private-key-wallet.md
.bulwark/findings/: H001.md  H063.md  H120.md  S001.md  S010.md
.claude/: svk-meta.json
.docs/: program-tax.md
.docs/security/: 2026-04-tax-identity-postmortem.md
.planning/: MILESTONES.md  PROJECT.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
Docs/: arb-il-analysis.md  jupiter-integration.md  public-push-checklist.md  vrf-gateway-findings.md
app/app/: globals.css
app/hooks/: useSwap.ts
app/lib/: brave-detect.ts
app/providers/: providers.tsx
ci-artifacts/verified-hashes/: verified-hashes.json
programs/rebalancer/: Cargo.toml
scripts/: debug-oracle-fields.ts  debug-oracle-health.ts  debug-oracle-validity.ts
scripts/crank/: check-mainnet-carnage-state.ts  crank-runner.ts  manual-execute-carnage.ts
scripts/deploy/: deployment-report.md  (+5 more)
sdk/titan-adapter/: Cargo.toml
sdk/titan-adapter/src/: lib.rs  sol_pool_venue.rs  token_info_builder.rs  vault_venue.rs
sdk/titan-adapter/src/math/: vault_math.rs
sdk/titan-adapter/src/state/: epoch_state.rs  pool_state.rs
sdk/titan-adapter/tests/: devnet-smoke-test.ts  test_construction.rs  test_edge_gauntlet.rs  test_mainnet_validation.rs  test_quoting.rs
(+78 files in other folders)
