[package]
name = "drfraudsworth-titan-adapter"
version = "0.1.0"
edition = "2021"
description = "Titan Pathfinder TradingVenue adapter for Dr. Fraudsworth DEX protocol"
license = "MIT"
repository = "https://github.com/MetalLegBob/drfraudsworth"
keywords = ["titan", "solana", "dex", "amm"]

[workspace]

[dependencies]
# Titan trait definitions
titan-integration-template = { git = "https://github.com/Titan-Pathfinder/integration-template" }

# Solana SDK (pinned to match Titan's 2.2.1)
solana-sdk = "~2.2"
solana-program = "~2.2"

# Token programs (for ATA derivation)
spl-token = "7"
spl-token-2022 = "9"
spl-associated-token-account = "6"

# Async (TradingVenue is an async trait)
async-trait = "0.1"

# Utilities
sha2 = "0.10"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
assert_no_alloc = "1.1"
